# ai-detectives

./: README.md  fraud-detection.ipynb  pyproject.toml
frontend/: app.py  blob.py  constant.py  customer_complaint_azure_main_v2.py  evaluation.py
new dataset/: ATM_Card_Fraud (2).txt  ATM_Card_Fraud.txt  Bank Impersonation Fraud Attempt.txt  Credit card fraud 2.txt  bulk transactions.txt  cheque_fraud.txt  loan_Fraud.txt  payment Fraud.txt
new dataset/AtM_Card_Fraud/: Email1.txt  Email2.txt  Email3.txt  Email4.txt  Email5.txt  Email6.txt  Email7.txt  Email8.txt  Email9.txt
new dataset/Cheque fraud/: Email 1.txt  Email 2.txt  Email 3.txt  Email 4.txt  Email 5.txt  Email 6.txt  Email 7.txt  Email 8.txt  Email 9.txt
new dataset/Cheque_fraud/: Email1.txt  Email2.txt  Email3.txt  Email4.txt  Email5.txt  Email6.txt  Email7.txt  Email8.txt  Email9.txt
new dataset/Loan_Fraud/: Email1.txt  Email2.txt  Email3.txt  Email4.txt  Email5.txt  Email6.txt  Email7.txt  Email8.txt  Email9.txt
new dataset/atm card/: Email 1.txt  Email 2.txt  Email 3.txt  Email 4.txt  Email 5.txt  Email 6.txt  Email 7.txt  Email 8.txt  Email 9.txt
new dataset/atm card 2/: Email 1 Initial Notification.txt  Email 10 Resolution Confirmation.txt  Email 2 Customer Response.txt  Email 3 Investigation Update.txt  Email 4 Security Measures.txt  Email 5 Confirmation of Security Me.txt  Email 6 Progress Update.txt  Email 7 Investigation Completion.txt  Email 8 Feedback Request.txt  Email 9 Customer Appreciation.txt
output/: Summary_20240505120418.txt  Summary_20240505182355.txt
(+16 files in other folders)
