[tool.poetry]
name = "ai-detectives"
version = "0.1.0"
description = ""
authors = ["github-cloudlabsuser-054 <github_cloudlabsuser_054@cloudlabsaiuser.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
openai = "^1.24.0"
python-dotenv = "^1.0.1"
streamlit = "^1.33.0"
ipykernel = "^6.29.4"
langchain-openai = "^0.1.6"
tiktoken = "^0.6.0"
chromadb = "^0.5.0"
langchain = "^0.1.17"
langchainhub = "^0.1.15"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
